{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 268,
  "lineage": "a817dcaf-3782-63b0-6352-05a1c93247f3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0af161dffac6c162e",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-095ce126b6e84c3e5",
            "domain": "vpc",
            "id": "eipalloc-0af161dffac6c162e",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0d2135cb442ec742a",
            "private_dns": "ip-10-0-1-50.us-east-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-3-23-245-52.us-east-2.compute.amazonaws.com",
            "public_ip": "3.23.245.52",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw-first",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.prod-subnet",
            "aws_vpc.vpc-first"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aeb7c931a5a61206",
            "arn": "arn:aws:ec2:us-east-2:874558718348:instance/i-0ba966aabc43f77e5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-0ba966aabc43f77e5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kd",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0d2135cb442ec742a"
              }
            ],
            "primary_network_interface_id": "eni-0d2135cb442ec742a",
            "private_dns": "ip-10-0-1-50.us-east-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "3.23.245.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01cf674241099ba5b",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01dd7eaeda32a42f8",
            "tags": {
              "Name": "test-ec2",
              "Patch Group": "Ubuntu-OS",
              "owner": "maly@deloitte.ca",
              "stack": "test"
            },
            "tags_all": {
              "Name": "test-ec2",
              "Patch Group": "Ubuntu-OS",
              "owner": "maly@deloitte.ca",
              "stack": "test"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bcf7036f8d22169c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.dev-resources-iam-profile",
            "aws_key_pair.ITKey",
            "aws_network_interface.web-server-nic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw-first",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:874558718348:internet-gateway/igw-0b47d0a499c19fc8d",
            "id": "igw-0b47d0a499c19fc8d",
            "owner_id": "874558718348",
            "tags": {
              "Name": "vpc-second-terraform"
            },
            "tags_all": {
              "Name": "vpc-second-terraform"
            },
            "vpc_id": "vpc-0d7070854038d7e95"
          },
          "dependencies": [
            "aws_vpc.vpc-first"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:874558718348:network-interface/eni-0d2135cb442ec742a",
            "id": "eni-0d2135cb442ec742a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:ec:ee:b1:96:b8",
            "owner_id": "874558718348",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0bcf7036f8d22169c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01dd7eaeda32a42f8"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.prod-subnet",
            "aws_vpc.vpc-first"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:874558718348:route-table/rtb-00bd2f53c5877a2fe",
            "id": "rtb-00bd2f53c5877a2fe",
            "owner_id": "874558718348",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b47d0a499c19fc8d",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b47d0a499c19fc8d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-route-table-terraform"
            },
            "tags_all": {
              "Name": "prod-route-table-terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7070854038d7e95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw-first",
            "aws_vpc.vpc-first"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aa1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e18cc8f9e1db14fb",
            "route_table_id": "rtb-00bd2f53c5877a2fe",
            "subnet_id": "subnet-01dd7eaeda32a42f8"
          },
          "dependencies": [
            "aws_internet_gateway.gw-first",
            "aws_route_table.prod-route-table",
            "aws_subnet.prod-subnet",
            "aws_vpc.vpc-first"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:874558718348:security-group/sg-0bcf7036f8d22169c",
            "description": "Allows access to Web Port",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bcf7036f8d22169c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver",
            "name_prefix": "",
            "owner_id": "874558718348",
            "revoke_rules_on_delete": false,
            "tags": {
              "stack": "test"
            },
            "tags_all": {
              "stack": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7070854038d7e95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-first"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:874558718348:subnet/subnet-01dd7eaeda32a42f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dd7eaeda32a42f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "874558718348",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-terraform-subnet "
            },
            "tags_all": {
              "Name": "vpc-terraform-subnet "
            },
            "vpc_id": "vpc-0d7070854038d7e95"
          },
          "dependencies": [
            "aws_vpc.vpc-first"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-first",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:874558718348:vpc/vpc-0d7070854038d7e95",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-088d55b0ca833c8a9",
            "default_route_table_id": "rtb-0d003f5a63528dfba",
            "default_security_group_id": "sg-06428e1ad2440b280",
            "dhcp_options_id": "dopt-0a653edbf3eb3eaab",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d7070854038d7e95",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d003f5a63528dfba",
            "owner_id": "874558718348",
            "tags": {
              "Name": "vpc-ssm"
            },
            "tags_all": {
              "Name": "vpc-ssm"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}